--- a/style.css
+++ b/style.css
@@ -21,6 +21,24 @@
     border-radius: 20px;
 }
 
+.music-search::-webkit-scrollbar {
+  
+  width: var(--sb-size);
+}
+.music-search::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 3px;
+}
+.music-search::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 3px;
+}
+@supports not selector(::-webkit-scrollbar) {
+  body {
+      scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  }
+}
 #iniMaincontainer{
     width: 100%;
     display: flex;
@@ -80,7 +98,6 @@ circle:nth-child(2){
     stroke: #FECF00;
     stroke-width: 3px;
     stroke-dasharray: calc(2*3.14*30);
-    /* stroke-dashoffset: 180; */
     transform-origin: center;
     transform: rotate(-90deg);
     stroke-linecap: round;
@@ -229,6 +246,9 @@ body {
     height: 100vh;
     width: 100%;
     display: flex;
+    --sb-track-color: #1a1a1a;
+  --sb-thumb-color: #403E3E;
+  --sb-size: 5px;
 }
 
 
