--- a/main/search/SPstyle.css
+++ b/main/search/SPstyle.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
   margin: 0;
   background-color: #121212;
   font-family: 'Poppins', sans-serif;
@@ -129,7 +130,7 @@ section.songs {
   flex: 1 1 auto;
   max-width: 700px;
   min-width: 320px;
-  max-height: 480px; 
+  height: 100%; 
   overflow-y: auto;
   padding-right: 8px; 
   scrollbar-width: thin;
